--- a/main.html
+++ b/main.html
@@ -4,10 +4,64 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.image-container{
+			width:200px;
+			
+		}
+		.text-width{
+			width:600px;
+		}
+		table{
+			width:100%;
+		}
+		table,td{
+			border:1px solid black;
+		}
+		.fixed-size{
+			width:1100px;
+			background:lightcyan;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+<!-- 	<h1></h1> -->
+	<div class="fixed-size">
+		<div>
+			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/FullMoon2010.jpg/947px-FullMoon2010.jpg" width="50%" />
+		</div>
+	<table>
+		<tbody>
+			<tr>
+				<td class="image-container">
+					<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/FullMoon2010.jpg/947px-FullMoon2010.jpg" width=100% />
+				</td>
+				<td class="text-width">Українська: Повний місяць, сфотографований 22 жовтня 2010 року.
+Date	22 October 2010
+Source	Own work
+Author	Gregory H. Revera
+Other versions	Derivative works of this file:</td>
+				<td class="image-container">
+					<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/FullMoon2010.jpg/947px-FullMoon2010.jpg" width=100% />
+				</td>
+			</tr>
+
+			<tr>
+				<td class="image-container">
+					<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/FullMoon2010.jpg/947px-FullMoon2010.jpg" width=100% />
+				<p>The Moon is Earth's only natural satellite. Its diameter is about one-quarter of Earth's (comparable to the width of Australia),[17] m</p>
+				</td>
+				<td class="text-width"><p> The Moon orbits Earth at an average distance of 384,400 km (238,900 mi), or about 30 times Earth's diameter. Its gravitational influence is the main driver of Earth's tides and very slowly lengthens Earth's day. The Moon's orbit around Earth has a sidereal period of 27.3 days. During each synodic period of 29.5 days, the amount of the Moon's Earth-facing surface that is illuminated by the Sun varies from none up to nearly 100%, resulting in lunarThe Moon orbits Earth at an average distance of 384,400 km (238,900 mi), or about 30 times Earth's diameter. Its gravitational influence is the main driver of Earth's tides and very slowly lengthens Earth's day. The Moon's orbit around Earth has a sidereal period of 27.3 days. During each synodic period of 29.5 days, the amount of the Moon's Earth-facing surface that is illuminated by the Sun varies from none up to nearly 100%, resulting in lunar</p></td>
+				<td class="image-container">
+					<img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/FullMoon2010.jpg/947px-FullMoon2010.jpg" width=100% />
+				<p>The Moon is Earth's only natural satellite. Its diameter is about one-quarter of Earth's (comparable to the width of Australia),[17] m</p>
+				</td>
+			</tr>
+		</thead>
+	</table>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
